--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
-  "name": "project_one",
+  "name": "@riorifaldi2004/math",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "npx tsc",
+    "start": "ts-node-dev --respawn --transpile-only index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "typescipt": "^1.0.0"
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.9.5"
   }
 }
